--- a/actvite33/src/main/resources/application.properties
+++ b/actvite33/src/main/resources/application.properties
@@ -4,4 +4,5 @@ server.port=8081
 spring.application.name=customer-service
 spring.datasource.url=jdbc:h2:mem:customer-db
 management.endpoints.web.exposure.include=*
+eureka.instance.preferIpAddress=true
 
