--- a/eurekaYsfi/eurekaYsfi/src/main/resources/application.properties
+++ b/eurekaYsfi/eurekaYsfi/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8761
 # dont register server itself as a client.
 eureka.client.fetch-registry=false
 # Does not register itself in the service registry.
-eureka.client.register-with-eureka=true
+eureka.client.register-with-eureka=true 
+eureka.instance.preferIpAddress=true
