--- a/billingYsfi/src/main/resources/application.properties
+++ b/billingYsfi/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:billing-db
 spring.cloud.discovery.enabled=true
 server.port=8083
 management.endpoints.web.exposure.include=*
+eureka.instance.preferIpAddress=true
