--- a/gatewayYsfi2/gatewayYsfi2/src/main/resources/application.properties
+++ b/gatewayYsfi2/gatewayYsfi2/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.cloud.discovery.enabled=true
 server.port=8888
 spring.application.name=gateway-service
 spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+eureka.instance.preferIpAddress=true
