--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:h2:mem:product-db
 spring.cloud.discovery.enabled=true
 server.port=8082
 management.endpoints.web.exposure.include=*
+eureka.instance.preferIpAddress=true
