--- a/billingYsfi/src/main/resources/application.properties
+++ b/billingYsfi/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.cloud.discovery.enabled=true
 server.port=8083
 management.endpoints.web.exposure.include=*
 eureka.instance.preferIpAddress=true
+
+
+keycloak.realm=wallet-realm
+keycloak.resource=wallet-client
+keycloak.bearer-only=true
+keycloak.auth-server-url=http://localhost:8080
+keycloak.ssl-required=none
