--- a/gatewayYsfi2/gatewayYsfi2/pom.xml
+++ b/gatewayYsfi2/gatewayYsfi2/pom.xml
@@ -44,6 +44,19 @@
 			<version>1.5.18</version>
 		</dependency>
 
+<!--		NEW KEY CLOAK-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--		</dependency>-->
+
+
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-starter -->
+<!--		<dependency>-->
+<!--			<groupId>org.keycloak</groupId>-->
+<!--			<artifactId>keycloak-spring-boot-starter</artifactId>-->
+<!--			<version>20.0.1</version>-->
+<!--		</dependency>-->
 
 
 	</dependencies>
