--- a/gatewayYsfi2/gatewayYsfi2/src/main/resources/application.properties
+++ b/gatewayYsfi2/gatewayYsfi2/src/main/resources/application.properties
@@ -3,4 +3,11 @@ server.port=8888
 spring.application.name=gateway-service
 spring.cloud.gateway.discovery.locator.enabled=true
 #spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-eureka.instance.preferIpAddress=true
+eureka.instance.preferIpAddress=true 
+
+#KEY CLOAK NEW
+keycloak.realm=wallet-realm
+keycloak.resource=wallet-client
+keycloak.bearer-only=true
+keycloak.auth-server-url=http://localhost:8080
+keycloak.ssl-required=none
