--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -62,6 +62,21 @@
 			<scope>test</scope>
 		</dependency>
 
+
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>20.0.1</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -90,6 +105,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>dockerjava</finalName>
 	</build>
 
 </project>
