--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8082
 management.endpoints.web.exposure.include=*
 eureka.instance.preferIpAddress=true
 
-keycloak.realm=wallet-realm
-keycloak.resource=wallet-client
-keycloak.bearer-only=true
-keycloak.auth-server-url=http://localhost:8080
-keycloak.ssl-required=none
+#keycloak.realm=wallet-realm
+#keycloak.resource=wallet-client
+#keycloak.bearer-only=true
+#keycloak.auth-server-url=http://localhost:8080
+#keycloak.ssl-required=none
